# ecg-identification

./: .gitignore  pyproject.toml
src/: configs.py  dataset.py  model.py  preprocess.py  train.py
src/utils/: fileUtils.py
