[tool.poetry]
name = "ecg-identification"
version = "0.1.0"
description = ""
authors = ["NormalAlkene <NormalAlkene@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
