[tool.poetry]
name = "ecg-identification"
version = "0.1.0"
description = ""
authors = ["NormalAlkene <NormalAlkene@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scipy = "^1.14.1"
matplotlib = "^3.9.3"

[[tool.poetry.source]]
name = "zju"
url = "https://mirrors.zju.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
